--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
                 </button>
                 <div class="dropdown">
                     <button class="action-btn more-options">
-                         More
+                        More
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler-chevron-down">
+                            <path d="M6 9l6 6l6 -6"/>
+                        </svg>
                     </button>
                     <div class="dropdown-content">
                         <a href="#">View Followups</a>
@@ -64,7 +67,7 @@
 
                     <div class="form-columns">
                         <div class="form-column">
-                            <h3>Billing</h3>
+                            <h4>Billing</h4>
                             <div class="form-row">
                             <div class="form-group">
                                 <label>Company</label>
@@ -126,7 +129,7 @@
                         </div>
 
                         <div class="form-column">
-                            <h3>Shipping</h3>
+                            <h4>Shipping</h4>
                             <div class="form-group search-group">
                                 <label>Search Shipping Address:</label>
                                 <div class="search-input">
