--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
 
                     <div class="form-columns order-details">
                         <div class="form-column">
+                            <div class="form-row">
                             <div class="form-group">
                                 <label>Order Date <span class="required">*</span></label>
                                 <div class="date-input">
@@ -212,6 +213,7 @@
                                 <label>Placed By <span class="required">*</span></label>
                                 <input type="text" value="Chuck McGuire">
                             </div>
+                        </div>
                             <div class="form-group phone-group">
                                 <label>Phone: <span class="required">*</span></label>
                                 <div class="phone-inputs">
@@ -240,6 +242,7 @@
                             </div>
                         </div>
                         <div class="form-column">
+                            <div class="form-row">
                             <div class="form-group">
                                 <label>Salesperson <span class="required">*</span></label>
                                 <select class="salesperson">
@@ -254,6 +257,7 @@
                                     </select>
                                     <button type="button" class="add-btn">+</button>
                                 </div>
+                            </div>
                             </div>
                             <div class="status-indicator-group">
                                 <div class="status-indicator success">
