--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
         </div>
         <div class="tabs">
             <button class="tab-btn active" data-tab="customer-details">Customer Details</button>
-            <button class="tab-btn" data-tab="order-items">Order Items</button>
-            <button class="tab-btn" data-tab="shipping">Shipping</button>
-            <button class="tab-btn" data-tab="payment">Payment</button>
-            <button class="tab-btn" data-tab="history">History</button>
+            <button class="tab-btn" data-tab="order-details">Order Details</button>
+            <button class="tab-btn" data-tab="add-items">Add Items</button>
+            <button class="tab-btn" data-tab="payment-details">Payment Details</button>
+            <button class="tab-btn" data-tab="shipment-details">Shipment Details</button>
         </div>
 
         <div class="tab-content active" id="customer-details">
@@ -279,24 +279,24 @@
             </form>
         </div>
 
-        <div class="tab-content" id="order-items">
-            <!-- Order Items content will go here -->
-            <p>Order Items content will be displayed here.</p>
+        <div class="tab-content" id="order-details">
+            <!-- Order Details content will go here -->
+            <p>Order Details content will be displayed here.</p>
         </div>
 
-        <div class="tab-content" id="shipping">
-            <!-- Shipping content will go here -->
-            <p>Shipping content will be displayed here.</p>
+        <div class="tab-content" id="add-items">
+            <!-- Add Items content will go here -->
+            <p>Add Items content will be displayed here.</p>
         </div>
 
-        <div class="tab-content" id="payment">
-            <!-- Payment content will go here -->
-            <p>Payment content will be displayed here.</p>
+        <div class="tab-content" id="payment-details">
+            <!-- Payment Details content will go here -->
+            <p>Payment Details content will be displayed here.</p>
         </div>
 
-        <div class="tab-content" id="history">
-            <!-- History content will go here -->
-            <p>History content will be displayed here.</p>
+        <div class="tab-content" id="shipment-details">
+            <!-- Shipment Details content will go here -->
+            <p>Shipment Details content will be displayed here.</p>
         </div>
     </div>
 
