--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
                                 <input type="text" value="Chuck McGuire">
                             </div>
                         </div>
+                        <div class="form-row">
                             <div class="form-group">
                                 <label>Address</label>
                                 <input type="text" value="417 Sherwood Dr.">
@@ -129,6 +130,7 @@
                             <div class="form-group">
                                 <label>Address 2</label>
                                 <input type="text">
+                            </div>
                             </div>
                             <div class="form-group city-state-zip">
                                 <div>
@@ -191,6 +193,7 @@
                                 <input type="text" value="Chuck McGuire">
                             </div>
                         </div>
+<div class="form-row">
                             <div class="form-group">
                                 <label>Address</label>
                                 <input type="text" value="417 Sherwood Drive">
@@ -199,6 +202,7 @@
                                 <label>Address 2</label>
                                 <input type="text">
                             </div>
+                        </div>
                             <div class="form-group city-state-zip">
                                 <div>
                                     <label>City</label>
@@ -271,6 +275,7 @@
                                     <button type="button" class="add-btn">+</button>
                                 </div>
                             </div>
+                            <div class="form-row">
                             <div class="form-group">
                                 <label>Email: <span class="required">*</span></label>
                                 <input type="email" value="chuck@pinpointus.com">
@@ -280,6 +285,7 @@
                                 <input type="text" value="abc-11">
                                 <div class="hint hint-text-red">(For multiple eStore values use '/')</div>
                             </div>
+                        </div>
                             <div class="form-group checkbox-group">
                                 <input type="checkbox" id="customer-items">
                                 <label for="customer-items">Customer Provided Items</label>
