--- a/index.html
+++ b/index.html
@@ -1808,11 +1808,15 @@ Monograms is not responsible for damages to customer provided items. There</text
                 <th class="text-center col-2xl">2XL</th>
                 <th class="text-center col-3xl">3XL</th>
                 <th class="text-center col-4xl">4XL</th>
-                <th class="text-center col-dash">-</th>
+                <th class="text-center col-dash">
+                    <div class="toggle-warehouses">
+                        <span class="toggle-icon">+</span>
+                    </div>
+                </th>
             </tr>
         </thead>
         <tbody>
-            <tr class="row-yellow">
+            <tr class="row-yellow default-visible">
                 <td>Dallas</td>
                 <td class="text-center">181</td>
                 <td class="text-center">343</td>
@@ -1822,7 +1826,7 @@ Monograms is not responsible for damages to customer provided items. There</text
                 <td class="text-center">323</td>
                 <td class="text-center">80</td>
                 <td class="text-center">59</td>
-                <td class="text-center">-</td>
+                <td class="text-center"></td>
             </tr>
             <tr class="row-white">
                 <td>Reno</td>
@@ -1834,7 +1838,7 @@ Monograms is not responsible for damages to customer provided items. There</text
                 <td class="text-center">125</td>
                 <td class="text-center">81</td>
                 <td class="text-center">26</td>
-                <td class="text-center">-</td>
+                <td class="text-center"></td>
             </tr>
             <tr class="row-blue">
                 <td>Cincinnati</td>
@@ -1846,7 +1850,7 @@ Monograms is not responsible for damages to customer provided items. There</text
                 <td class="text-center">1034</td>
                 <td class="text-center">346</td>
                 <td class="text-center">133</td>
-                <td class="text-center">-</td>
+                <td class="text-center"></td>
             </tr>
             <tr class="row-white">
                 <td>Seattle</td>
@@ -1858,7 +1862,7 @@ Monograms is not responsible for damages to customer provided items. There</text
                 <td class="text-center">123</td>
                 <td class="text-center">92</td>
                 <td class="text-center">49</td>
-                <td class="text-center">-</td>
+                <td class="text-center"></td>
             </tr>
             <tr class="row-blue">
                 <td>Robbinsville</td>
@@ -1870,7 +1874,7 @@ Monograms is not responsible for damages to customer provided items. There</text
                 <td class="text-center">89</td>
                 <td class="text-center">48</td>
                 <td class="text-center">41</td>
-                <td class="text-center">-</td>
+                <td class="text-center"></td>
             </tr>
             <tr class="row-white">
                 <td>Jacksonville</td>
@@ -1882,7 +1886,7 @@ Monograms is not responsible for damages to customer provided items. There</text
                 <td class="text-center">289</td>
                 <td class="text-center">115</td>
                 <td class="text-center">28</td>
-                <td class="text-center">-</td>
+                <td class="text-center"></td>
             </tr>
             <tr class="row-blue">
                 <td>Minneapolis</td>
@@ -1894,7 +1898,7 @@ Monograms is not responsible for damages to customer provided items. There</text
                 <td class="text-center">675</td>
                 <td class="text-center">163</td>
                 <td class="text-center">78</td>
-                <td class="text-center">-</td>
+                <td class="text-center"></td>
             </tr>
             <tr class="row-white">
                 <td>Phoenix</td>
@@ -1906,7 +1910,7 @@ Monograms is not responsible for damages to customer provided items. There</text
                 <td class="text-center">150</td>
                 <td class="text-center">206</td>
                 <td class="text-center">16</td>
-                <td class="text-center">-</td>
+                <td class="text-center"></td>
             </tr>
             <tr class="row-blue">
                 <td>Richmond</td>
@@ -1918,7 +1922,7 @@ Monograms is not responsible for damages to customer provided items. There</text
                 <td class="text-center">115</td>
                 <td class="text-center">61</td>
                 <td class="text-center">18</td>
-                <td class="text-center">-</td>
+                <td class="text-center"></td>
             </tr>
         </tbody>
     </table>
