--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             <div class="tabs">
                 <button class="tab-btn active" data-tab="customer-details">Customer Details</button>
                 <button class="tab-btn" data-tab="order-details">Order Details</button>
-                <button class="tab-btn" data-tab="add-items">Add Items</button>
+                <button class="tab-btn" data-tab="flat-goods">Flat Goods</button>
                 <button class="tab-btn" data-tab="payment-details">Payment Details</button>
                 <button class="tab-btn" data-tab="shipment-details">Shipment Details</button>
             </div>
@@ -1423,9 +1423,8 @@ Monograms is not responsible for damages to customer provided items. There</text
                 </form>
             </div>
 
-            <div class="tab-content" id="add-items">
+            <div class="tab-content" id="flat-goods">
                 <div class="form-section">
-                    <h4 class="section-heading">Flat Goods</h4>
                     
                     <div class="pui-row">
                         <div class="pui-col-md-6">
@@ -1439,9 +1438,7 @@ Monograms is not responsible for damages to customer provided items. There</text
                         </div>
                     </div>
                     <!-- Flat Goods Styles List -->
-
-                    <h4 class="section-heading">Flat Goods Styles</h4>
-                    <div class="search-results">
+<div class="search-results">
                         <table>
                             <thead>
                                 <tr>
@@ -1467,7 +1464,6 @@ Monograms is not responsible for damages to customer provided items. There</text
                             </tbody>
                         </table>
                     </div>
-                    <div class="divider"></div>
 <div class="style-info-container pui-mb-10px">
                     <div class="od-product-info">
                         <h4>BC3001</h4>
