client mentioned changes update

--- a/index.html
+++ b/index.html
@@ -431,6 +431,25 @@
                                         <input type="email" value="mcguire7654@gmail.com">
                                     </div>
                                 </div>
+                                <div class="section-card pui-mt-10px">
+                                    <div>
+                                        <label>Turn Emails Off? <span class="required">*</span></label>
+                                        <div class="radio-group"
+                                            style="display: flex; align-items: center; margin-top: 5px;">
+                                            <label class="radio-container">
+                                                <input type="radio" name="emails-off" value="yes">
+                                                <span class="radio-mark"></span>
+                                                Yes
+                                            </label>
+                                            <label class="radio-container" style="margin-right: 15px;">
+                                                <input type="radio" name="emails-off" value="no" checked>
+                                                <span class="radio-mark"></span>
+                                                No
+                                            </label>
+    
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
 
                             <div class="form-column">
@@ -881,25 +900,7 @@
                                     <input type="text" class="form-control">
                                 </div>
                             </div>
-                            <div class="pui-col-xl-3">
-                                <div class="form-group">
-                                    <label>Turn Emails Off? <span class="required">*</span></label>
-                                    <div class="radio-group"
-                                        style="display: flex; align-items: center; margin-top: 5px;">
-                                        <label class="radio-container">
-                                            <input type="radio" name="emails-off" value="yes">
-                                            <span class="radio-mark"></span>
-                                            Yes
-                                        </label>
-                                        <label class="radio-container" style="margin-right: 15px;">
-                                            <input type="radio" name="emails-off" value="no" checked>
-                                            <span class="radio-mark"></span>
-                                            No
-                                        </label>
-
-                                    </div>
-                                </div>
-                            </div>
+                            
                         </div>
                         <div class="divider"></div>
                         <div class="line-items-header pui-row">
