--- a/index.html
+++ b/index.html
@@ -2120,7 +2120,7 @@ Monograms is not responsible for damages to customer provided items. There</text
                                     <select>
                                         <option value="" disabled selected>Select Location</option>
                                     </select>
-                                    <a href="#" class="add-option-btn-sm" title="Add New">+</a>
+                                    <a href="#" class="add-option-btn-sm pui-ms-5px" title="Add New">+</a>
                                 </div>
                             </div>
                             <div class="pui-col-md-2">
