client mentioned changes

--- a/index.html
+++ b/index.html
@@ -1058,11 +1058,11 @@ Monograms is not responsible for damages to customer provided items. There</text
                                 <table class="items-table">
                                     <colgroup>
                                         <col width="40">
-                                        <col width="80">
+                                        <col width="90">
                                         <col>
                                         <col width="70">
+                                        <col width="120">
                                         <col width="100">
-                                        <col width="80">
                                         <col width="80">
                                     </colgroup>
                                     <thead>
@@ -1074,8 +1074,8 @@ Monograms is not responsible for damages to customer provided items. There</text
                                             </th>
                                             <th>Qty</th>
                                             <th>Qty Shipped</th>
-                                            <th class="pui-text-right">Price</th>
-                                            <th class="pui-text-right">Total</th>
+                                            <th class="pui-text-right no-sort">Price</th>
+                                            <th class="pui-text-right line-total-header">Total</th>
                                         </tr>
                                     </thead>
                                     <tbody>
