--- a/index.html
+++ b/index.html
@@ -2391,7 +2391,7 @@ Monograms is not responsible for damages to customer provided items. There is an
                         
                     </div>
                     <div class="pui-row">
-                        <div class="pui-col-md-7">
+                        <div class="pui-col-xl-7">
                             <!-- STEP 3: Quantity & Pricing -->
                             <div class="section-card pui-mb-15px">
                                 <!-- <div class="pui-row pui-mb-15px">
@@ -2799,7 +2799,7 @@ Monograms is not responsible for damages to customer provided items. There is an
                                 </div>
                             </div>
                         </div>
-                        <div class="pui-col-md-5">
+                        <div class="pui-col-xl-5">
                             <!-- STEP 4: Shipping & Timeline -->
                             <div class="section-card pui-mb-15px bg-color-2">
                                 <!-- <div class="pui-row pui-mb-15px">
