--- a/index.html
+++ b/index.html
@@ -1060,13 +1060,13 @@ Monograms is not responsible for damages to customer provided items. There is an
                                 <table class="items-table">
                                     <colgroup>
                                         <col width="40">
-                                        <col width="90">
+                                        <col width="100">
 
                                         <col>
                                         <col width="80">
                                         <col width="70">
                                         <col width="120">
-                                        <col width="100">
+                                        <col width="80">
                                         <col width="90">
                                     </colgroup>
                                     <thead>
@@ -1565,9 +1565,92 @@ Monograms is not responsible for damages to customer provided items. There is an
                                             </td>
                                         </tr>
 
+<!-- Promotional Item 1 -->
+                                        <tr class="main-item promo-item promo-item-bg">
+                                            <td><input type="checkbox" class="item-checkbox"></td>
+                                            <td><a href="#" class="item-link">MCK-2Color</a></td>
 
+                                            <td>
+                                                <div class="item-description">
+                                                    <button class="toggle-details" type="button">+</button>
+                                                    <span class="product-name">2 Color Imprint NO Underbase</span>
+                                                    <div class="item-actions">
+                                                        <!-- <button class="btn-action" title="Copy">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                            viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                            stroke-width="2" stroke-linecap="round"
+                                                            stroke-linejoin="round">
+                                                            <rect x="9" y="9" width="13" height="13" rx="2" ry="2">
+                                                            </rect>
+                                                            <path
+                                                                d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1">
+                                                            </path>
+                                                        </svg></button> -->
+                                                        <button class="btn-action" title="Edit">
+                                                            <svg xmlns="http://www.w3.org/2000/svg" width="16"
+                                                                height="16" viewBox="0 0 24 24" fill="none"
+                                                                stroke="currentColor" stroke-width="2"
+                                                                stroke-linecap="round" stroke-linejoin="round">
+                                                                <path
+                                                                    d="M17 3a2.85 2.83 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5Z">
+                                                                </path>
+                                                            </svg></button>
+                                                        <button class="btn-action" title="Duplicate">
+                                                            <svg xmlns="http://www.w3.org/2000/svg" width="16"
+                                                                height="16" viewBox="0 0 24 24" fill="none"
+                                                                stroke="currentColor" stroke-width="2"
+                                                                stroke-linecap="round" stroke-linejoin="round">
+                                                                <rect width="14" height="14" x="8" y="8" rx="2" ry="2">
+                                                                </rect>
+                                                                <path
+                                                                    d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2">
+                                                                </path>
+                                                            </svg></button>
+                                                        <button class="btn-action" title="Delete">
+                                                            <svg xmlns="http://www.w3.org/2000/svg" width="16"
+                                                                height="16" viewBox="0 0 24 24" fill="none"
+                                                                stroke="currentColor" stroke-width="2"
+                                                                stroke-linecap="round" stroke-linejoin="round">
+                                                                <path d="M3 6h18"></path>
+                                                                <path d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"></path>
+                                                                <path d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"></path>
+                                                                <line x1="10" x2="10" y1="11" y2="17"></line>
+                                                                <line x1="14" x2="14" y1="11" y2="17"></line>
+                                                            </svg></button>
+                                                    </div>
+                                                </div>
+                                            </td>
+                                            <td class="item-image">
+                                                <img src="assets/images/lion-head.jpg"
+                                                    alt="Polo Shirt">
+                                            </td>
+                                            <td>2</td>
+                                            <td>0</td>
+                                            <!-- <td class="pui-text-right">$45.99</td> -->
+                                            <td colspan="2" class="pui-text-right line-total-amount">$20.00</td>
+                                        </tr>
+<tr class="size-variations promo-item-bg" style="display: none;">
+                                            <td></td>
+                                            <td></td>
+                                            <td>Color: Athletic Heather, <i>Front Logo - Lion Head 2 Color Flag</i></td>
+                                            <td></td>
 
+                                            <td>1</td>
+                                            <td>0</td>
+                                            <td class="pui-text-right">$0.00</td>
+                                            <td class="pui-text-right">$0.00</td>
+                                        </tr>
+<tr class="specification-item promo-item-bg" style="display: none;">
+                                            <td></td>
+                                            <td></td>
+                                            <td>Setup Fee</i></td>
+                                            <td></td>
 
+                                            <td>1</td>
+                                            <td>0</td>
+                                            <td class="pui-text-right">$20.00</td>
+                                            <td class="pui-text-right">$20.00</td>
+                                        </tr>
                                     </tbody>
                                     <!-- Footer with subtotal -->
                                     <tfoot>
@@ -2993,8 +3076,8 @@ Monograms is not responsible for damages to customer provided items. There is an
                 </div>
             </div>
             <div class="tab-content" id="shipment-details">
-                <!-- Shipment Details content will go here -->
-                <p>Shipment Details content will be displayed here.</p>
+               <!-- Shipment Details content will go here -->
+                <p>Shipment details will be displayed here.</p>
             </div>
             <div class="tab-content" id="payment-details">
                 <!-- Order Summary Section -->
