--- a/index.html
+++ b/index.html
@@ -4080,11 +4080,11 @@ Monograms is not responsible for damages to customer provided items. There is an
                             </div>
                         </div>
 
-                        <div class="alert alert-warning pui-mb-15px">
+                        <!-- <div class="alert alert-warning pui-mb-15px">
                             <i class="fa fa-exclamation-triangle pui-me-5px"></i>
                             <strong>Warning:</strong> This order is not yet approved. Please verify all information
                             before approving.
-                        </div>
+                        </div> -->
 
                         <!-- Order Status -->
                         <div class="form-group">
