--- a/index.html
+++ b/index.html
@@ -6675,24 +6675,24 @@ Monograms is not responsible for damages to customer provided items. There is an
                                 <div class="pui-row" id="lineItemsDropdownContainer" style="display: none;">
                                     <div class="pui-col-md-12">
                                         <div class="form-group">
-                                            <label>Select Line Item:</label>
+                                            <label>Select Box:</label>
                                             <select class="form-control" id="lineItemsSelect">
-                                                <option value="">-- Select Line Item --</option>
-                                                <option value="4533">4533 - Test Item 1</option>
-                                                <option value="5533">5533 - Test Item 2</option>
-                                                <option value="112">112 - Test Item 3</option>
+                                                <option value="">-- Select Box --</option>
+                                                <option value="4533">Box 1</option>
+                                                <option value="5533">Box 2</option>
+                                                <option value="112">Box 3</option>
                                             </select>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="pui-row">
-                                    <div class="pui-col-md-12">
+                                    <!-- <div class="pui-col-md-12">
                                         <div class="form-group">
                                             <label>Item:</label>
                                             <input type="text" class="form-control" data-field-index="0"
                                                 value="testgeomon1">
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <div class="pui-col-md-4">
                                         <div class="form-group">
                                             <label>Qty Shipped:</label>
